--- a/index.html
+++ b/index.html
@@ -269,6 +269,18 @@
                         <h4>Por Que Estudar um Ambiente Dinâmico?</h4>
                         <p>A natureza muda o tempo todo porque tudo está ligado. Se muda uma planta, um bicho ou o clima, tudo muda junto. Por isso, nossas atitudes podem ajudar ou atrapalhar a natureza.</p>
                     </div>
+				<div class="barra-lupa"> Assista a um fragmento do documentário A Vida no Nosso Planeta, de David Attenborough, que mostra a história da Terra e a evolução da vida ao longo de bilhões de anos, a versão completa está disponível apenas na Netflix </div>
+				<div class="video-container-box">
+                <div class="video-component" >
+                    <div class="video-wrapper">
+                        <iframe class="youtube-player" 
+                                src="https://www.youtube.com/embed/iKQVKJX7chY?si=_qwR22sG2yrQPw1b&vq=hd1080" 
+                                allowfullscreen>
+                        </iframe>
+                    </div> 
+                </div>
+            </div>
+	
             </div>
         </div>
 		
