--- a/hotspot_imagem/celula_animal.html
+++ b/hotspot_imagem/celula_animal.html
@@ -324,47 +324,47 @@
         const organelasData = {
             nucleo: {
                 title: "Núcleo",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-K1Ht4J3J.png",
+                image: "https://i.imgur.com/OaOCnGI.png",
                 text: "O núcleo contém o material genético da célula (DNA). O DNA (ácido desoxirribonucleico) é responsável por regular todos os processos que ocorrem dentro da célula."
             },
             centriolos: {
                 title: "Centríolos",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-JnpWvhgB.png",
+                image: "https://i.imgur.com/AUEUSKe.png",
                 text: "Exclusivos de células animais, são organelas cilíndricas que intervêm na divisão celular, ajudando a organizar os cromossomos."
             },
             microvilosidades: {
                 title: "Microvilosidades",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-j48fwhEe.png",
+                image: "https://i.imgur.com/3ZD6Oqc.png",
                 text: "São extensões digitiformes (em forma de dedo) de algumas células, que permitem que elas expandam sua superfície e, portanto, aumentem a superfície de troca de substâncias. Eles geralmente são encontrados em células epiteliais de animais."
             },
             mitocondria: {
                 title: "Mitocôndria",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-6WtrP3cY.png",
+                image: "https://i.imgur.com/xZsPY3H.png",
                 text: "É a organização celular responsável por fornecer a maior parte da energia necessária para a atividade celular na forma de ATP."
             },
             reticuloendoplasmatico: {
                 title: "Retículo Endoplasmático",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-cb8hofEp.png",
+                image: "https://i.imgur.com/ApUJoeh.png",
                 text: "É uma rede de membranas, típica das células eucarióticas, que participa da síntese e do transporte de proteínas e lipídios. Existem dois tipos de RE: liso e rugoso."
             },
             ribossomos: {
                 title: "Ribossomos",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-GnH1Jfmk.png",
+                image: "https://i.imgur.com/QSyNE0T.png",
                 text: "Organelas responsáveis pela síntese de proteínas. Os ribossomos são compostos de duas partes, chamadas subunidades."
             },
             golgi: {
                 title: "Aparelho de Golgi",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-8Xl1Okdo.png",
+                image: "https://i.imgur.com/hmAjFGb.png",
                 text: "Importante na separação e endereçamento das moléculas sintetizadas na célula."
             },
             canais: {
                 title: "Canais/Poros",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-KtFtmVMf.png",
+                image: "https://i.imgur.com/znB2Qbz.png",
                 text: "Na membrana plasmática existem poros ou canais, formados por proteínas, cuja função é controlar o movimento de substâncias e água entre o interior e o exterior da célula."
             },
             citoplasma: {
                 title: "Citoplasma",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-1OMNFnHv.png",
+                image: "https://i.imgur.com/cwpSfcG.png",
                 text: "O citoplasma é o ambiente interno das células que abriga as organelas celulares e permite sua movimentação. É constituído principalmente por água."
             },
             lisossomos: {
@@ -374,7 +374,7 @@
             },
             membrana: {
                 title: "Membrana Plasmática",
-                image: "C:\\Users\\Italo\\Documents\\TCC\\TCC\\Interatividade\\esquema-das-organelas-presentes-em-uma-celula-animal-1538139\\content\\images\\image-hCCoV3mY.png",
+                image: "https://i.imgur.com/dxbBVwE.png",
                 text: "Estrutura fina que delimita a célula e permite a troca de substâncias. É constituída por uma camada lipídica bicamada (duas camadas) de lipídios denominada camada fosfolipídica."
             }
         };
