--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
   <div class="subtopicos" id="subtopicos7">
     <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(61)">7.1 O que é vida</a></div>
     <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(62)">7.2 A célula</a></div>
-    <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(63)">7.3 Tipos de células</a></div>
-    <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(64)">7.4 Estrutura da célula</a></div>
+    <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(63)">7.3 Estrutura da célula</a></div>
+    <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(64)">7.4 Células Eucarióticas e Procarióticas</a></div>
     <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(65)">7.5 Tecidos e órgãos</a></div>
     <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(66)">7.6 O sistema nervoso</a></div>
     <div class="subtopico"><a href="#" class="subtopico-link" onclick="goToPage(67)">7.7 Cérebro, medula e nervos</a></div>
@@ -1117,10 +1117,31 @@
   </div>
 </div>
 
-<!-- Unidade 7 – 7.3 Tipos de células - pagina63 -->
+<!-- Unidade 7 – 7.3 Estrutura da célula - pagina64 -->
 <div class="page">
   <div class="page-header">
-    <h1>Tipos de células</h1>
+    <h1>Estrutura da célula</h1>
+  </div>
+  <div class="page-content">
+    <div class="text-box">
+      <h3>Partes principais</h3>
+      <p>As células animais e vegetais possuem estruturas comuns, como a membrana plasmática, citoplasma, núcleo e organelas como as mitocôndrias, que produzem energia. Porém, também apresentam estruturas especiais como parede celular, cloroplastos e um grande vacúolo central. Já a célula animal não possui esses elementos, mas conta com os centríolos, importantes na divisão celular.</p>
+    </div>
+	
+<div class="barra-lupa"> Veja abaixo as principais estruturas de uma celula animal e posteiormente a de uma celula vegetal</div>
+	
+				<div style="height: 120vh;">
+                 <iframe src="https://ibmxu.github.io/guia/hotspot_imagem/celula_animal.html" style="width: 100%; height: 100%; border: none;"></iframe>
+                </div>
+				
+					
+  </div>
+</div>
+
+<!-- Unidade 7 – 7.4 Tipos de células - pagina63 -->
+<div class="page">
+  <div class="page-header">
+    <h1>Células Eucarióticas e Procarióticas </h1>
   </div>
   <div class="page-content">
     <div class="text-box">
@@ -1129,20 +1150,7 @@
     </div>
   </div>
 </div>
-
-<!-- Unidade 7 – 7.4 Estrutura da célula - pagina64 -->
-<div class="page">
-  <div class="page-header">
-    <h1>Estrutura da célula</h1>
-  </div>
-  <div class="page-content">
-    <div class="text-box">
-      <h3>Partes principais</h3>
-      <p>As células possuem membrana plasmática, citoplasma e núcleo. Cada parte tem uma função importante para o funcionamento do organismo.</p>
-    </div>
-  </div>
-</div>
-
+		
 <!-- Unidade 7 – 7.5 Tecidos e órgãos - pagina65 -->
 <div class="page">
   <div class="page-header">
