--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,15 @@
       <h3>Como separar os materiais</h3>
       <p>Existem técnicas para separar misturas, como filtração, decantação e peneiração. Elas são usadas no dia a dia e na indústria para recuperar os materiais.</p>
     </div>
+
+<div class="highlight-box">
+                        <h4>🎮 Teste seus conhecimentos!</h4>
+                        <p>Agora que você aprendeu sobre separação de misturas, que tal testar seus conhecimentos com nosso jogo interativo? Escolha o método correto para separar cada mistura!</p>
+					</div>
+	<div style="height: 115vh;">
+                 <iframe src="https://ibmxu.github.io/guia/jogos/separacao_mistura.html"  style= " border: none; overflow:hidden; width: 100%; height: 100%; " scrolling="no" ></iframe>
+                </div>
+	  
   </div>
 </div>
 
