--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@
 <script src="https://ibmxu.github.io/guia/animacaoTopo.js"></script>
 <script src="https://ibmxu.github.io/guia/animacaoInicial.js"></script>
 <script src="https://ibmxu.github.io/guia/sumario.js"></script>
-<script src="https://ibmxu.github.io/guia/navegacao.js"></script>
+<script src="https://ibmxu.github.io/guia/jsteste/navegaID.js"></script>
 <script src="https://ibmxu.github.io/guia/scriptvideo.js"></script>
 
 </body>
